--- a/index.html
+++ b/index.html
@@ -186,24 +186,6 @@
     updateGallery();
   </script>
 
-
-
-
-  <!-- ---------- Workflow Visualization Section ---------- -->
-<section class="workflow-visualization-section">
-    <div class="workflow-visualization-container">
-      <h2>Workflow Visualization</h2>
-      <div class="video-container">
-        <video id="workflow-video" controls>
-          <source id="workflow-video-source" src="" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-      </div>
-      <p class="workflow-caption" id="workflow-caption"></p>
-      <button id="workflow-prev" class="workflow-nav">&#8592;</button>
-      <button id="workflow-next" class="workflow-nav">&#8594;</button>
-    </div>
-  </section>
   
 
   <script>
@@ -457,7 +439,7 @@
   
   <style>
     .data-insights-section {
-      background-color: #f5f5f5;
+      background-color: #ffffff;
       width: 100%;
       padding: 60px 0;
     }
