--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           <div class="agreement-tabs">
             <button class="tab-button active" data-tab="0">Execution Graphs</button>
             <button class="tab-button" data-tab="1">Seed Scenario</button>
-            <button class="tab-button" data-tab="2">Final Operating Agreement</button>
+            <button class="tab-button" data-tab="2">Human Generated Agreement</button>
           </div>
           <div class="tab-content active" data-content="0">
             <div style="display: flex; flex-direction: column; align-items: center; gap: 1rem;">
@@ -199,7 +199,7 @@
             <iframe src="./assets/docs/Prompt15.pdf" title="Input Prompt"></iframe>
           </div>
           <div class="tab-content" data-content="2">
-            <iframe src="./assets/docs/OA1.pdf" title="Final Operating Agreement"></iframe>
+            <iframe src="./assets/docs/OA15.pdf" title="Human Generated Agreement"></iframe>
           </div>
         </div>
       </div>
@@ -210,7 +210,7 @@
           <div class="agreement-tabs">
             <button class="tab-button active" data-tab="0">Execution Graphs</button>
             <button class="tab-button" data-tab="1">Seed Scenario</button>
-            <button class="tab-button" data-tab="2">Final Operating Agreement</button>
+            <button class="tab-button" data-tab="2">LLM Generated Agreement</button>
           </div>
           <div class="tab-content active" data-content="0">
             <div style="display: flex; flex-direction: column; align-items: center; gap: 1rem;">
@@ -222,7 +222,7 @@
             <iframe src="./assets/docs/Prompt15.pdf" title="Input Prompt"></iframe>
           </div>
           <div class="tab-content" data-content="2">
-            <iframe src="./assets/docs/OA2.pdf" title="Final Operating Agreement"></iframe>
+            <iframe src="./assets/docs/OA15_O1.pdf" title="LLM Generated Agreement"></iframe>
           </div>
         </div>
       </div>
