--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
   (function(){
     const slides = [
       {
-        researchQuestion: "Research Question 1",
+        researchQuestion: "How do human and LLM-generated legal plans differ in structure?",
         src: "./assets/images/RQ1.png",
         alt: "Data Insights Slide 1",
         insights: [
@@ -366,7 +366,7 @@ contrast, LLMs generate flatter, sequential plans with more top-level subtasks b
         ]
       },
       {
-        researchQuestion: "Research Question 2",
+        researchQuestion: " How do human and LLM-generated legal workflows differ in structure, execution, and adherence to task plans?",
         src: "./assets/images/RQ3.png",
         alt: "Data Insights Slide 2",
         insights: [
@@ -374,7 +374,7 @@ contrast, LLMs generate flatter, sequential plans with more top-level subtasks b
         ]
       },
       {
-        researchQuestion: "Research Question 3",
+        researchQuestion: " What do diverse legal workflows look like?",
         src: "./assets/images/RQ2.png",
         alt: "Data Insights Slide 3",
         insights: [
@@ -385,7 +385,7 @@ contrast, LLMs generate flatter, sequential plans with more top-level subtasks b
         ]
       },
       {
-        researchQuestion: "Research Question 4",
+        researchQuestion: "How can we flag unlikely or anomalous steps in a workflow ?",
         src: "./assets/images/RQ4.png",
         alt: "Data Insights Slide 3",
         insights: [
