--- a/index.html
+++ b/index.html
@@ -107,13 +107,11 @@
 <p class="platform-description">
   This data collection tool enables us to study not just what decisions are made while drafting by law students, but also how they adapt, iterate, and navigate ambiguity across the full drafting workflow.
 </p>
- 
+</div>
+</section>
 
-  
- <!-- ---------- Entity Formation Workflow Section ---------- -->
-<section class="entity-formation-section">
-
-<!-- ---------- Entity Formation Workflow Section ---------- --> <section class="entity-formation-section"> <div class="entity-formation-container"> <h2>Entity Formation Workflow</h2> <p class="entity-workflow-intro"> Our data collection tool is rooted in a  visual, expert-informed task plan that maps out the full legal drafting workflow—from initial client intake to final agreement. 🎯 This task plan supports flexible navigation across subtasks in the data collection tool, while maintaining a clear structure rooted in real-world practice. </p>
+<!-- ---------- Entity Formation Workflow Section ---------- --> 
+ <section class="entity-formation-section"> <div class="entity-formation-container"> <h2>Entity Formation Workflow</h2> <p class="entity-workflow-intro"> Our data collection tool is rooted in a  visual, expert-informed task plan that maps out the full legal drafting workflow—from initial client intake to final agreement. 🎯 This task plan supports flexible navigation across subtasks in the data collection tool, while maintaining a clear structure rooted in real-world practice. </p>
 
 
 <div class="workflow-gallery" style="display: flex; align-items: center; justify-content: center; gap: 10px; margin: 20px 0;">
