--- a/index.html
+++ b/index.html
@@ -428,11 +428,11 @@
         ]
       },
       {
-        researchQuestion: "How can we flag unlikely or anomalous steps in a workflow ?",
-        src: "./assets/images/RQ4.png",
-        alt: "Data Insights Slide 3",
+        researchQuestion: "How do Human and LLM workflows differ from each other?",
+        src: "./assets/images/RQ5.png",
+        alt: "Data Insights Slide 4",
         insights: [
-          "Each workflow step is scored based on how closely it aligns with typical human behavior. Steps are flagged as 'on track,' 'needs review,' or 'off track,' helping identify actions that follow, diverge from, or significantly depart from common legal reasoning patterns."
+          "We visualize Step-level beam search visualizations of Human and LLM workflows, colored by atypicality score (z-score) as predicted by our workflow monitor: Transitions are scored by how well they align with human reasoning norms. Human workflows follow stable, commonly observed reasoning patterns, while LLM workflows exhibit greater variability and introduce less context-sensitive transitions."
         ]
       }
     ];
